<resources>
    <string name="app_name" translatable="false">Hello</string>
    <string name="Happy">Happy Birthday</string>
    <string name="tan">result</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="but">button</string>
    <string name="hint_txt">input your name</string>
    <string name="label_add1" translatable="false">+1 point</string>
    <string name="label_add2" translatable="false">+2 points</string>
    <string name="label_add3" translatable="false">+3 points</string>
    <string name="btn_reset_label" translatable="false">Reset</string>
    <string name="btn_dollar_label" translatable="false">Dollar</string>
    <string name="btn_euro_label" translatable="false">Euro</string>
    <string name="btn_won_label" translatable="false">won</string>
    <string name="rmb_hint" translatable="false">Input keywords</string>
    <string name="btn_opencfg_label">config</string>
    <string name="btn_save_label">save</string>
    <string name="menu_set_label">Setting</string>
    <string name="title_activity_rate_list">RateListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="label_open_list">OpenList</string>
</resources>
